move drawing code

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="../MediaBrowser.Server.Implementations/packages.config" />
+  <repository path="..\Emby.Drawing\packages.config" />
   <repository path="..\MediaBrowser.Api\packages.config" />
   <repository path="..\MediaBrowser.Common.Implementations\packages.config" />
   <repository path="..\MediaBrowser.Controller\packages.config" />
