--- a/Emby.Drawing/Emby.Drawing.csproj
+++ b/Emby.Drawing/Emby.Drawing.csproj
@@ -48,21 +48,41 @@
     <Compile Include="..\SharedVersion.cs">
       <Link>Properties\SharedVersion.cs</Link>
     </Compile>
-    <Compile Include="ImageHeader.cs" />
+    <Compile Include="GDI\GDIImageEncoder.cs" />
+    <Compile Include="GDI\ImageExtensions.cs" />
+    <Compile Include="GDI\PercentPlayedDrawer.cs" />
+    <Compile Include="GDI\PlayedIndicatorDrawer.cs" />
+    <Compile Include="GDI\UnplayedCountIndicator.cs" />
+    <Compile Include="IImageEncoder.cs" />
+    <Compile Include="Common\ImageHeader.cs" />
+    <Compile Include="ImageMagick\ImageMagickEncoder.cs" />
+    <Compile Include="ImageMagick\StripCollageBuilder.cs" />
     <Compile Include="ImageProcessor.cs" />
-    <Compile Include="PercentPlayedDrawer.cs" />
-    <Compile Include="PlayedIndicatorDrawer.cs" />
+    <Compile Include="ImageMagick\PercentPlayedDrawer.cs" />
+    <Compile Include="ImageMagick\PlayedIndicatorDrawer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnplayedCountIndicator.cs" />
+    <Compile Include="ImageMagick\UnplayedCountIndicator.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GDI\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="ImageMagick\fonts\MontserratLight.otf" />
     <EmbeddedResource Include="ImageMagick\fonts\robotoregular.ttf" />
     <EmbeddedResource Include="ImageMagick\fonts\webdings.ttf" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MediaBrowser.Common\MediaBrowser.Common.csproj">
+      <Project>{9142eefa-7570-41e1-bfcc-468bb571af2f}</Project>
+      <Name>MediaBrowser.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MediaBrowser.Controller\MediaBrowser.Controller.csproj">
+      <Project>{17e1f4e6-8abd-4fe5-9ecf-43d4b6087ba2}</Project>
+      <Name>MediaBrowser.Controller</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MediaBrowser.Model\MediaBrowser.Model.csproj">
+      <Project>{7eeeb4bb-f3e8-48fc-b4c5-70f0fff8329b}</Project>
+      <Name>MediaBrowser.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
