--- a/MediaBrowser.Model.net35/MediaBrowser.Model.net35.csproj
+++ b/MediaBrowser.Model.net35/MediaBrowser.Model.net35.csproj
@@ -429,6 +429,9 @@
     <Compile Include="..\MediaBrowser.Model\Dto\IHasServerId.cs">
       <Link>Dto\IHasServerId.cs</Link>
     </Compile>
+    <Compile Include="..\MediaBrowser.Model\Dto\IHasSyncInfo.cs">
+      <Link>Dto\IHasSyncInfo.cs</Link>
+    </Compile>
     <Compile Include="..\MediaBrowser.Model\Dto\IItemDto.cs">
       <Link>Dto\IItemDto.cs</Link>
     </Compile>
