--- a/MediaBrowser.Controller/packages.config
+++ b/MediaBrowser.Controller/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="morelinq" version="1.1.0" targetFramework="net45" />
+  <package id="Patterns.IO" version="1.0.0.3" targetFramework="net45" />
 </packages>
