--- a/MediaBrowser.Server.Implementations/packages.config
+++ b/MediaBrowser.Server.Implementations/packages.config
@@ -3,6 +3,7 @@
   <package id="MediaBrowser.Naming" version="1.0.0.32" targetFramework="net45" />
   <package id="Mono.Nat" version="1.2.23.0" targetFramework="net45" />
   <package id="morelinq" version="1.1.0" targetFramework="net45" />
+  <package id="Patterns.IO" version="1.0.0.3" targetFramework="net45" />
   <package id="Patterns.Logging" version="1.0.0.2" targetFramework="net45" />
   <package id="SocketHttpListener" version="1.0.0.3" targetFramework="net45" />
 </packages>
