Report manager implementation

--- a/MediaBrowser.Api/MediaBrowser.Api.csproj
+++ b/MediaBrowser.Api/MediaBrowser.Api.csproj
@@ -84,10 +84,28 @@
     <Compile Include="Playback\MediaInfoService.cs" />
     <Compile Include="Playback\TranscodingThrottler.cs" />
     <Compile Include="PlaylistService.cs" />
-    <Compile Include="Reports\ReportFieldType.cs" />
-    <Compile Include="Reports\ReportResult.cs" />
-    <Compile Include="Reports\ReportsService.cs" />
+    <Compile Include="Reports\Common\HeaderMetadata.cs" />
+    <Compile Include="Reports\Common\ItemViewType.cs" />
+    <Compile Include="Reports\Common\ReportBuilderBase.cs" />
+    <Compile Include="Reports\Common\ReportExportType.cs" />
+    <Compile Include="Reports\Common\ReportFieldType.cs" />
+    <Compile Include="Reports\Common\ReportHeaderIdType.cs" />
+    <Compile Include="Reports\Common\ReportHelper.cs" />
+    <Compile Include="Reports\Common\ReportViewType.cs" />
+    <Compile Include="Reports\Data\ReportBuilder.cs" />
+    <Compile Include="Reports\Data\ReportExport.cs" />
+    <Compile Include="Reports\Data\ReportGroup.cs" />
+    <Compile Include="Reports\Data\ReportHeader.cs" />
+    <Compile Include="Reports\Data\ReportItem.cs" />
+    <Compile Include="Reports\Data\ReportOptions.cs" />
+    <Compile Include="Reports\Data\ReportResult.cs" />
+    <Compile Include="Reports\Data\ReportRow.cs" />
     <Compile Include="Reports\ReportRequests.cs" />
+    <Compile Include="Reports\ReportsService.cs" />
+    <Compile Include="Reports\Stat\ReportStatBuilder.cs" />
+    <Compile Include="Reports\Stat\ReportStatGroup.cs" />
+    <Compile Include="Reports\Stat\ReportStatItem.cs" />
+    <Compile Include="Reports\Stat\ReportStatResult.cs" />
     <Compile Include="StartupWizardService.cs" />
     <Compile Include="Subtitles\SubtitleService.cs" />
     <Compile Include="Movies\CollectionService.cs" />
