install service with Emby name

--- a/MediaBrowser.ServerApplication/App.config
+++ b/MediaBrowser.ServerApplication/App.config
@@ -13,7 +13,7 @@
   </nlog>
   <appSettings>
     <add key="DebugProgramDataPath" value="..\..\..\ProgramData-Server" />
-    <add key="ReleaseProgramDataPath" value="%ApplicationData%\MediaBrowser-Server" />
+    <add key="ReleaseProgramDataPath" value=".." />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
