--- a/MediaBrowser.Server.Mac/Emby.Server.Mac.csproj
+++ b/MediaBrowser.Server.Mac/Emby.Server.Mac.csproj
@@ -259,9 +259,6 @@
     </BundleResource>
     <BundleResource Include="Resources\appicon.icns" />
     <BundleResource Include="Resources\MediaBrowser.Server.Mac\Images.xcassets\AppIcon.appiconset\Contents.json" />
-    <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\.DS_Store">
-      <Link>Resources\dashboard-ui\.DS_Store</Link>
-    </BundleResource>
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\about.html">
       <Link>Resources\dashboard-ui\about.html</Link>
     </BundleResource>
@@ -300,9 +297,6 @@
     </BundleResource>
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\connectlogin.html">
       <Link>Resources\dashboard-ui\connectlogin.html</Link>
-    </BundleResource>
-    <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\cordovaindex.html">
-      <Link>Resources\dashboard-ui\cordovaindex.html</Link>
     </BundleResource>
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\dashboard.html">
       <Link>Resources\dashboard-ui\dashboard.html</Link>
@@ -657,9 +651,6 @@
     </BundleResource>
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\wizarduser.html">
       <Link>Resources\dashboard-ui\wizarduser.html</Link>
-    </BundleResource>
-    <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\css\.DS_Store">
-      <Link>Resources\dashboard-ui\css\.DS_Store</Link>
     </BundleResource>
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\css\card.css">
       <Link>Resources\dashboard-ui\css\card.css</Link>
@@ -1306,6 +1297,9 @@
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\scripts\livetvchannels.js">
       <Link>Resources\dashboard-ui\scripts\livetvchannels.js</Link>
     </BundleResource>
+    <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\scripts\livetvcomponents.js">
+      <Link>Resources\dashboard-ui\scripts\livetvcomponents.js</Link>
+    </BundleResource>
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\scripts\livetvguide.js">
       <Link>Resources\dashboard-ui\scripts\livetvguide.js</Link>
     </BundleResource>
@@ -1471,8 +1465,14 @@
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\scripts\pluginspage.js">
       <Link>Resources\dashboard-ui\scripts\pluginspage.js</Link>
     </BundleResource>
+    <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\scripts\queryfilters.js">
+      <Link>Resources\dashboard-ui\scripts\queryfilters.js</Link>
+    </BundleResource>
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\scripts\ratingdialog.js">
       <Link>Resources\dashboard-ui\scripts\ratingdialog.js</Link>
+    </BundleResource>
+    <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\scripts\registrationservices.js">
+      <Link>Resources\dashboard-ui\scripts\registrationservices.js</Link>
     </BundleResource>
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\scripts\remotecontrol.js">
       <Link>Resources\dashboard-ui\scripts\remotecontrol.js</Link>
@@ -1665,6 +1665,21 @@
     </BundleResource>
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\thirdparty\apiclient\alt\events.js">
       <Link>Resources\dashboard-ui\thirdparty\apiclient\alt\events.js</Link>
+    </BundleResource>
+    <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\thirdparty\cordova\chromecast.js">
+      <Link>Resources\dashboard-ui\thirdparty\cordova\chromecast.js</Link>
+    </BundleResource>
+    <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\thirdparty\cordova\connectsdk.js">
+      <Link>Resources\dashboard-ui\thirdparty\cordova\connectsdk.js</Link>
+    </BundleResource>
+    <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\thirdparty\cordova\generaldevice.js">
+      <Link>Resources\dashboard-ui\thirdparty\cordova\generaldevice.js</Link>
+    </BundleResource>
+    <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\thirdparty\cordova\imagestore.js">
+      <Link>Resources\dashboard-ui\thirdparty\cordova\imagestore.js</Link>
+    </BundleResource>
+    <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\thirdparty\cordova\registrationservices.js">
+      <Link>Resources\dashboard-ui\thirdparty\cordova\registrationservices.js</Link>
     </BundleResource>
     <BundleResource Include="..\MediaBrowser.WebDashboard\dashboard-ui\thirdparty\cordova\remotecontrols.js">
       <Link>Resources\dashboard-ui\thirdparty\cordova\remotecontrols.js</Link>
